welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: value !== is not a member of Int
	while(getX() !== getMondeLargeur() - 1 && getY() !== 0) {
                     ^